Bug 1442547 - Show site data manager selection in high contrast mode. r=dao
MozReview-Commit-ID: 5JLOIElY8IS

UltraBlame original commit: 30228244beafcc1380105dc02e75c0edf17249f9

--- a/browser/themes/shared/incontentprefs/siteDataSettings.css
+++ b/browser/themes/shared/incontentprefs/siteDataSettings.css
@@ -12,6 +12,21 @@ height
 sitesList
 >
 richlistitem
+[
+selected
+]
+{
+outline
+:
+1px
+solid
+transparent
+;
+}
+#
+sitesList
+>
+richlistitem
 >
 hbox
 .
